crates/toml_edit/tests/snapshots/invalid/table/newline-04.stderr
TOML parse error at line 1, column 5
  |
1 | [tbl.
  |     ^
invalid table header
expected `.`, `]`
